--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^19.1.2",
+    "@react-native-firebase/auth": "^19.1.2",
+    "@react-native-firebase/firestore": "^19.1.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
+    "expo-barcode-scanner": "~12.9.3",
+    "expo-font": "~11.10.3",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.10.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-calendars": "^1.1304.1",
+    "react-native-maps": "1.10.0",
+    "react-native-qrcode-svg": "^6.3.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@expo/vector-icons": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
